--- a/example.html
+++ b/example.html
@@ -32,6 +32,16 @@
       <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
     </div>
   </div>
+  <div class="custom-wrapper">
+    <div class="grid rowgutterless">
+      <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
+      <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
+      <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
+      <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
+      <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
+      <div class="grid__item large--1-3"><div class="grid__box">grid__item</div></div>
+    </div>
+  </div>
 
   <div class="custom-wrapper">
     <div class="grid">
