--- a/examples/example.html
+++ b/examples/example.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="css/screen.css">
+  <link rel="stylesheet" type="text/css" href="../css/screen.css">
   <style>
   </style>
 </head>
