--- a/examples/example.html
+++ b/examples/example.html
@@ -26,6 +26,11 @@
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--full"><div class="grid__box">grid__item with a grid__box</div></div>
     </div>
   </div>
 
@@ -38,6 +43,11 @@
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--full"><div class="grid__box">grid__item with a grid__box</div></div>
     </div>
   </div>
   
@@ -50,6 +60,11 @@
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--full"><div class="grid__box">grid__item with a grid__box</div></div>
     </div>
   </div>
   
@@ -62,6 +77,11 @@
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--full"><div class="grid__box">grid__item with a grid__box</div></div>
     </div>
   </div>
 
