--- a/examples/example.html
+++ b/examples/example.html
@@ -16,22 +16,39 @@
         <span class="legend--grid__box">.grid__box</span>
       </span>
     </span>
+    <p>The <strong>.grid</strong> class defines the grid context which will be the parent fot the <strong>.grid__item</strong>s.</p>
+    <p>The <strong>.grid__item</strong> class defines the single grid element and can directly contains the element content but you should not mess with padding on this elements.</p>
+    <p>The optional <strong>.grid__box</strong> class defines the inner content of grid element and will be the context for the element content. You can do whathever you want with margin and padding o this elements.</p>
   </div>
 
   <div class="wrapper">
     <h3>Default</h3>
     <div class="grid">
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 medium--1-3 nml--1-2</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 medium--1-3 nml--1-2</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 medium--1-3 nml--1-2</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 medium--1-3 nml--1-2</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 medium--1-3 nml--1-2</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 medium--1-3 nml--1-2</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">large--1-2 medium--1-2 nml--1-2</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">large--1-2 medium--1-2 nml--1-2</div></div>
+      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">large--3-11 medium--3-8 nml--1-3</div></div>
+      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">large--8-11 medium--5-8 nml--2-3</div></div>
+      <div class="grid__item"><div class="grid__box">No size classes defined</div></div>
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <h3>.grid__item only Vs .grid__item .grid__box</h3>
+    <div class="grid">
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2">grid__item with a grid__box</div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2">grid__item with a grid__box</div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2">grid__item with a grid__box</div>
+    </div>
+    <div class="grid">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--full"><div class="grid__box">grid__item with a grid__box</div></div>
     </div>
   </div>
 
@@ -89,29 +106,29 @@
   <div class="wrapper">
     <h3>Optional --min Versions On .grid__item Sizes (Flexbox Only)</h3>
     <div class="grid">
-      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">Minimum 1/3 (large and medium breakpoint)</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">Minimum 1/3 (large and medium breakpoint)</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">Minimum 1/3 (large and medium breakpoint)</div></div>
+      <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">Minimum 1/2 (large and medium breakpoint)</div></div>
+      <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">Minimum 1/2 (large and medium breakpoint)</div></div>
+      <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">Minimum 1/2 (large and medium breakpoint)</div></div>
     </div>
   </div>
 
   <div class="wrapper">
     <h3>Forced Symmetric Gutters</h3>
     <div class="grid symmetric-gutters">
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">grid__item with a grid__box</div></div>
-      <div class="grid__item large--full"><div class="grid__box">grid__item with a grid__box</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
+      <div class="grid__item large--full"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
     </div>
   </div>
 
