--- a/examples/example.html
+++ b/examples/example.html
@@ -116,7 +116,7 @@
   </div>
 
   <div class="wrapper">
-    <h3>Forced Symmetric Gutters</h3>
+    <h3>Symmetric Gutters (Forced)</h3>
     <div class="grid symmetric-gutters">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
