--- a/examples/example.html
+++ b/examples/example.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="legend">
+  <div class="legend" id="legend">
     <h1>FPAWIP Grid Usage Examples</h1>
     <span class="legend--grid">.grid
       <span class="legend--grid__item">.grid__item
@@ -21,7 +21,7 @@
     <p>The optional <strong>.grid__box</strong> class defines the inner content of grid element and will be the context for the element content. You can do whathever you want with margin and padding o this elements.</p>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" id="default">
     <h3>Default</h3>
     <div class="grid">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" id="grid__item-vs-grid__box">
     <h3>.grid__item only Vs .grid__item .grid__box</h3>
     <div class="grid">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2">grid__item without a grid__box</div>
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" id="gutterless">
     <h3>.gutterless</h3>
     <div class="grid gutterless">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
@@ -69,7 +69,7 @@
     </div>
   </div>
   
-  <div class="wrapper">
+  <div class="wrapper" id="rowgapless">
     <h3>.rowgapless</h3>
     <div class="grid rowgapless">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
@@ -86,7 +86,7 @@
     </div>
   </div>
   
-  <div class="wrapper">
+  <div class="wrapper" id="gutterless-rowgapless">
     <h3>both .gutterless and .rowgapless</h3>
     <div class="grid gutterless rowgapless">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
@@ -103,7 +103,7 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" id="nested-grids">
     <h3>Nested Grids</h3>
     <div class="grid">
       <div class="grid__item large--1-2 medium--1-2 nml--1-2">grid__item without a grid__box</div>
@@ -149,7 +149,7 @@
     </div>
   </div>
   
-  <div class="wrapper">
+  <div class="wrapper" id="min-version">
     <h3>Optional --min Versions On .grid__item Sizes (Flexbox Only)</h3>
     <div class="grid">
       <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">Minimum 1/3 (large and medium breakpoint)</div></div>
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" id="symmetric-gutters">
     <h3>Symmetric Gutters (Forced)</h3>
     <div class="grid symmetric-gutters">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Gutters (margin and padding) on both sides</div></div>
@@ -178,7 +178,7 @@
     </div>
   </div>
 
-  <div class="wrapper">
+  <div class="wrapper" id="nested-grids-messed-gutters">
     <h3>Nested Grids With Messed Symmetric Gutters</h3>
     <div class="grid symmetric-gutters">
       <div class="grid__item large--1-2 medium--1-2 nml--1-2">grid__item without a grid__box</div>
