--- a/examples/examples.html
+++ b/examples/examples.html
@@ -2,38 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FPAWIP Grid Usage Examples</title>
+  <title>FPAWIP Grid Reference/Examples</title>
   <link rel="stylesheet" type="text/css" href="../css/screen.css">
   <style>
   </style>
 </head>
 <body>
 
-  <div class="legend" id="legend">
-    <h1>FPAWIP Grid Usage Examples</h1>
-    <span class="legend--grid">.grid
-      <span class="legend--grid__item">.grid__item
-        <span class="legend--grid__box">.grid__box</span>
+  <h1>FPAWIP Grid Reference/Examples</h1>
+
+  <div class="reference-box" id="grid-definition-classes">
+    <h3>Grid Definition Classes</h3>
+    <div class="legend">
+      <span class="legend--grid">.grid
+        <span class="legend--grid__item">.grid__item
+          <span class="legend--grid__box">.grid__box</span>
+        </span>
       </span>
-    </span>
+    </div>
     <p>The <strong>.grid</strong> class defines the grid context which will be the parent fot the <strong>.grid__item</strong>s.</p>
     <p>The <strong>.grid__item</strong> class defines the single grid element and can directly contains the element content but you should not mess with padding on this elements.</p>
     <p>The optional <strong>.grid__box</strong> class defines the inner content of grid element and will be the context for the element content. You can do whathever you want with margin and padding o this elements.</p>
   </div>
 
+  <div class="reference-box" id="responsive-size-classes">
+    <h3>Responsive Size Classes</h3>
+    <p><strong>Size classes</strong> are defined per breakpoint and work only into the defined breakpoint, so you can develop desktop-first or mobile-first as you prefer.<br>
+    Breakpoints are <strong>large</strong>, <strong>medium</strong>, <strong>nml*</strong> (nomensland), <strong>small</strong> and <strong>micro*</strong>. You can define them in the _mq.scss file.</p>
+    <p>If a <strong>.grid__item</strong> does not have a size class applied it will always be large as the container.</p>
+    <p><strong>*</strong> The <strong>nml</strong> breakpoint is an optional one that overlaps between the <strong>small</strong> and <strong>medium</strong> ones.<br>
+      The <strong>micro</strong> breakpoint, when used, overrides the <strong>small</strong> one.
+    If you want you can rename the breakpoint size classes name to better fit your needs.</p>
+    <p>Every size class has many modifiers to define the width of the element.<br>
+      The grid could be used with <strong>12</strong>, <strong>10</strong>, <strong>6</strong>, <strong>5</strong>, <strong>4</strong>, <strong>3</strong> and <strong>2</strong> columns and with a <strong>main-sidebar “golden ratio”</strong>, and you can mix the widths without define how many columns form the grid.<br>
+      For example, if you want an element to be 1 half of the grid container, you can define an element as <strong>large--6-12</strong> or <strong>large--1-2</strong>, or every other class with a 1/2 ratio.</p>
+  </div>
+
   <div class="wrapper" id="default">
     <h3>Default</h3>
     <div class="grid">
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
-      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">large--1-3 / medium--1-3 / nml--1-2</div></div>
-      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">large--1-2 / medium--1-2 / nml--1-2</div></div>
-      <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">large--1-2 / medium--1-2 / nml--1-2</div></div>
-      <div class="grid__item large--3-11 medium--3-8 nml--1-3"><div class="grid__box">large--3-11 / medium--3-8 / nml--1-3</div></div>
-      <div class="grid__item large--8-11 medium--5-8 nml--2-3"><div class="grid__box">large--8-11 / medium--5-8 / nml--2-3</div></div>
+      <div class="grid__item large--1-12 medium--1-12 nml--1-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--11-12 medium--11-12 nml--9-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+
+      <div class="grid__item large--2-12 medium--1-6 nml--2-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--10-12 medium--5-6 nml--8-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+
+      <div class="grid__item large--3-12 medium--1-4 nml--3-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--9-12 medium--3-4 nml--7-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+
+      <div class="grid__item large--4-12 medium--1-3 nml--4-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--8-12 medium--2-3 nml--6-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+
+      <div class="grid__item large--5-12 medium--5-12 nml--6-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--7-12 medium--7-12 nml--4-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+
+      <div class="grid__item large--6-12 medium--1-2 nml--7-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--6-12 medium--1-2 nml--3-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+
+      <div class="grid__item large--8-11 medium--8-11 nml--2-3"><div class="grid__box">large--8-11 / medium--5-8 / nml--2-3</div></div>
+      <div class="grid__item large--3-11 medium--3-11 nml--1-3"><div class="grid__box">large--3-11 / medium--3-8 / nml--1-3</div></div>
+
+      <div class="grid__item large--5-8 medium--5-8 nml--2-3"><div class="grid__box">large--8-11 / medium--5-8 / nml--2-3</div></div>
+      <div class="grid__item large--3-8 medium--3-8 nml--1-3"><div class="grid__box">large--3-11 / medium--3-8 / nml--1-3</div></div>
+      
       <div class="grid__item"><div class="grid__box">No size classes defined</div></div>
     </div>
   </div>
@@ -126,6 +157,30 @@
       </div>
       <div class="grid__item large--1-2 medium--1-2 nml--1-2">grid__item without a grid__box</div>
     </div>
+
+    <div class="grid rowgapless">
+      <div class="grid__item">rowgapless grid</div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2">grid__item without a grid__box</div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2">grid__item without a grid__box</div>
+      <div class="grid__item large--1-2 medium--1-2">
+        <div class="grid rowgapless">
+          <div class="grid__item large--1-2 medium--1-2">
+            grid__item without a grid__box
+          </div>
+          <div class="grid__item large--1-2 medium--1-2">
+            grid__item without a grid__box
+          </div>
+          <div class="grid__item large--1-2 medium--1-2">
+            grid__item without a grid__box
+          </div>
+          <div class="grid__item large--1-2 medium--1-2">
+            grid__item without a grid__box
+          </div>
+        </div>
+      </div>
+      <div class="grid__item large--1-2 medium--1-2 nml--1-2">grid__item without a grid__box</div>
+    </div>
+
     <div class="grid">
       <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-2 medium--1-2 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
@@ -158,6 +213,28 @@
       <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">Minimum 1/2 (large and medium breakpoint)</div></div>
       <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">Minimum 1/2 (large and medium breakpoint)</div></div>
       <div class="grid__item large--1-2--min medium--1-2--min nml--1-2-min"><div class="grid__box">Minimum 1/2 (large and medium breakpoint)</div></div>
+    </div>
+  </div>
+  
+  <div class="wrapper" id="min-version">
+    <h3>.set-of-[x] Modifier(Flexbox Only)</h3>
+    <div class="grid set-of-3">
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+    </div>
+    <div class="grid set-of-3">
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+    </div>
+    <div class="grid set-of-3">
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+    </div>
+    <div class="grid set-of-3">
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
+      <div class="grid__item large--1-3--min medium--1-3--min nml--1-2-min"><div class="grid__box">.grid__item takes all the available space but only in the first row</div></div>
     </div>
   </div>
 
