--- a/examples/examples.html
+++ b/examples/examples.html
@@ -118,7 +118,7 @@
   </div>
   
   <div class="wrapper" id="gutterless-rowgapless">
-    <h3>both .gutterless and .rowgapless</h3>
+    <h3>Both .gutterless and .rowgapless</h3>
     <div class="grid gutterless rowgapless">
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
       <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">grid__item with a grid__box</div></div>
