First Reference Version for the Public

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -41,29 +41,29 @@
   <div class="wrapper" id="default">
     <h3>Default</h3>
     <div class="grid">
-      <div class="grid__item large--1-12 medium--1-12 nml--1-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
-      <div class="grid__item large--11-12 medium--11-12 nml--9-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--1-12 medium--1-12 nml--1-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-10</div></div>
+      <div class="grid__item large--11-12 medium--11-12 nml--9-10"><div class="grid__box">large--11-12 medium--11-12 nml--9-10</div></div>
 
-      <div class="grid__item large--2-12 medium--1-6 nml--2-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
-      <div class="grid__item large--10-12 medium--5-6 nml--8-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--2-12 medium--1-6 nml--2-10"><div class="grid__box">large--2-12 / medium--1-6 / nml--2-10</div></div>
+      <div class="grid__item large--10-12 medium--5-6 nml--8-10"><div class="grid__box">large--10-12 / medium--5-6 / nml--8-10</div></div>
 
-      <div class="grid__item large--3-12 medium--1-4 nml--3-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
-      <div class="grid__item large--9-12 medium--3-4 nml--7-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--3-12 medium--1-4 nml--3-10"><div class="grid__box">large--3-12 / medium--1-4 / nml--3-10</div></div>
+      <div class="grid__item large--9-12 medium--3-4 nml--7-10"><div class="grid__box">large--9-12 / medium--3-4 / nml--7-10</div></div>
 
-      <div class="grid__item large--4-12 medium--1-3 nml--4-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
-      <div class="grid__item large--8-12 medium--2-3 nml--6-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--4-12 medium--1-3 nml--4-10"><div class="grid__box">large--4-12 / medium--1-3 / nml--4-10</div></div>
+      <div class="grid__item large--8-12 medium--2-3 nml--6-10"><div class="grid__box">large--8-12 / medium--2-3 / nml--6-10</div></div>
 
-      <div class="grid__item large--5-12 medium--5-12 nml--6-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
-      <div class="grid__item large--7-12 medium--7-12 nml--4-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--5-12 medium--5-12 nml--6-10"><div class="grid__box">large--5-12 / medium--5-12 / nml--6-10</div></div>
+      <div class="grid__item large--7-12 medium--7-12 nml--4-10"><div class="grid__box">large--7-12 / medium--7-12 / nml--4-10</div></div>
 
-      <div class="grid__item large--6-12 medium--1-2 nml--7-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
-      <div class="grid__item large--6-12 medium--1-2 nml--3-10"><div class="grid__box">large--1-12 / medium--1-12 / nml--1-6</div></div>
+      <div class="grid__item large--6-12 medium--1-2 nml--7-10"><div class="grid__box">large--6-12 / medium--1-2 / nml--7-10</div></div>
+      <div class="grid__item large--6-12 medium--1-2 nml--3-10"><div class="grid__box">large--6-12 / medium--1-2 / nml--3-10</div></div>
 
-      <div class="grid__item large--8-11 medium--8-11 nml--2-3"><div class="grid__box">large--8-11 / medium--5-8 / nml--2-3</div></div>
-      <div class="grid__item large--3-11 medium--3-11 nml--1-3"><div class="grid__box">large--3-11 / medium--3-8 / nml--1-3</div></div>
+      <div class="grid__item large--8-11 medium--8-11 nml--2-3"><div class="grid__box">large--8-11 / medium--8-11 / nml--2-3</div></div>
+      <div class="grid__item large--3-11 medium--3-11 nml--1-3"><div class="grid__box">large--3-11 / medium--3-11 / nml--1-3</div></div>
 
-      <div class="grid__item large--5-8 medium--5-8 nml--2-3"><div class="grid__box">large--8-11 / medium--5-8 / nml--2-3</div></div>
-      <div class="grid__item large--3-8 medium--3-8 nml--1-3"><div class="grid__box">large--3-11 / medium--3-8 / nml--1-3</div></div>
+      <div class="grid__item large--5-8 medium--5-8 nml--2-3"><div class="grid__box">large--5-8 / medium--5-8 / nml--2-3</div></div>
+      <div class="grid__item large--3-8 medium--3-8 nml--1-3"><div class="grid__box">large--3-8 / medium--3-8 / nml--1-3</div></div>
       
       <div class="grid__item"><div class="grid__box">No size classes defined</div></div>
     </div>
