Added Meta Viewport

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
   <title>FPAWIP Grid Reference/Examples</title>
   <link rel="stylesheet" type="text/css" href="../css/screen.css">
   <style>
