Renamed screen.css in grid.css

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1">
   <title>FPAWIP Grid Reference/Examples</title>
-  <link rel="stylesheet" type="text/css" href="../css/screen.css">
+  <link rel="stylesheet" type="text/css" href="../css/grid.css">
   <link rel="stylesheet" type="text/css" href="../css/example.css">
   <style>
   </style>
