Added Equal Heights and Auto Heigths Flags

--- a/examples/index.html
+++ b/examples/index.html
@@ -303,6 +303,27 @@
     </div>
   </div>
 
+
+
+  <div class="wrapper" id="grid__item-vs-grid__box">
+    <h3>Equal Heights Vs. Auto Heights</h3>
+    <div class="grid">
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Default behavior<br>grid__item child the same height of the siblings<br><br>Additional line for testing purposes only</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Default behavior<br>grid__item child the same height of the siblings</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Default behavior<br>grid__item child the same height of the siblings</div></div>
+    </div>
+    <div class="grid auto-heights">
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">.auto-heights on grid element<br>grid__item child with independent height  than the siblings<br><br>Additional line for testing purposes only</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">.auto-heights on grid element<br>grid__item child with independent height  than the siblings</div></div>
+      <div class="grid__item large--1-3 medium--1-3 nml--1-2"><div class="grid__box">.auto-heights on grid element<br>grid__item child with independent height  than the siblings</div></div>
+    </div>
+    <div class="grid">
+      <div class="grid__item             large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Default behavior<br>grid__item child the same height of the siblings<br><br>Additional line for testing purposes only</div></div>
+      <div class="grid__item             large--1-3 medium--1-3 nml--1-2"><div class="grid__box">Default behavior<br>grid__item child the same height of the siblings</div></div>
+      <div class="grid__item auto-height large--1-3 medium--1-3 nml--1-2"><div class="grid__box">.auto-height on grid__item element<br>grid__item child with independent height than the siblings</div></div>
+    </div>
+  </div>
+
   <div class="togglers-panel">
     <button class="js-toggle-boxes">Toggle Element Colors</button>
   </div>
